# vulkan_ray_tracing_minimal_abstraction

./: .gitignore  README.md  makefile
headless/: CMakeLists.txt
headless/resources/: cube_scene.mtl
headless/src/: main.cpp  shader.rchit
ray_pipeline/: CMakeLists.txt  log.txt
ray_pipeline/include/: tiny_obj_loader.h  tinyobj_loader_c.h
ray_pipeline/src/: main.c  main.cpp  shader.rgen  shader.rmiss  shader_shadow.rmiss  tinyobj_loader_c.h
ray_pipeline/src/shaders/: basic.vert  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytrace_shadow.rmiss
ray_query/: CMakeLists.txt  makefile
ray_query/res/: cube_scene_large_pile.mtl
ray_query/src/: main.c  main.cpp  tinyobj_loader_c.h
ray_query/src/shaders/: basic.frag  basic.vert
src/: main.c
src/shaders/: raytrace.rchit  raytrace.rgen  raytrace.rmiss
